--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
                 <a href="/events_and_exhibits.html#Professor_of_aeronautics" class="productbox text_black">
                     <div class="product_img"><img src="images/plane.png" alt="Visiting Professor of Aeronautics image">
                     </div>
-                    <p>Visiting Professor of Aeronautics</p>
+                    <h3>Visiting Professor of Aeronautics</h3>
                 </a>
                 <a href="/events_and_exhibits.html#night_in_the_museum" class="productbox text_black">
                     <div class="product_img"><img src="images/roberto-nickson-396152.jpg"
                             alt="Night in the Museum image"></div>
-                    <p>Night in the Museum</p>
+                    <h3>Night in the Museum</h3>
                 </a>
                 <a href="/events_and_exhibits.html#Energetica_exhibition_on_loan" class="productbox text_black">
                     <div class="product_img"><img src="images/lightenergy.png"
                             alt="Visiting Professor of Aeronautics image"></div>
-                    <p>Energetica Exhibition on Loan</p>
+                    <h3>Energetica Exhibition on Loan</h3>
                 </a>
             </div>
             <div class="space"><a href="/events_and_exhibits.html#news_section" class="button b_green">Find out more</a>
@@ -124,26 +124,26 @@
             <div class="grid3fit  content_wrap">
                 <a href="/events_and_exhibits.html#cosmology" class="productbox">
                     <div class="product_img"><img src="images/celso-405219.jpg" alt="The moon image"></div>
-                    <p class="text_white">Cosmology</p>
+                    <h3 class="text_white">Cosmology</h3>
                 </a>
                 <a href="/events_and_exhibits.html#evolution" class="productbox">
                     <div class="product_img"><img src="images/evolution.png" alt="Image of people">
                     </div>
-                    <p class="text_white">Evolution</p>
+                    <h3 class="text_white">Evolution</h3>
                 </a>
                 <a href="/events_and_exhibits.html#biology_and_medicine" class="productbox">
                     <div class="product_img"><img src="images/heart-2607178_1920.jpg" alt="Image of a heart imitation">
                     </div>
-                    <p class="text_white">Biology and Medicine</p>
+                    <h3 class="text_white">Biology and Medicine</h3>
                 </a>
                 <a href="/events_and_exhibits.html#robotics_and_AI" class="productbox">
                     <div class="product_img"><img src="images/robot.png" alt="Image of a robot">
                     </div>
-                    <p class="text_white">Robotics and AI</p>
+                    <h3 class="text_white">Robotics and AI</h3>
                 </a>
                 <a href="/events_and_exhibits.html#ecology" class="productbox">
                     <div class="product_img"><img src="images/ecology.png" alt="Image of bottom vegetation"></div>
-                    <p class="text_white">Ecology</p>
+                    <h3 class="text_white">Ecology</h3>
                 </a>
             </div>
             <div class="space"><a href="/events_and_exhibits.html#exhibition_spaces" class="button b_green">Find out
@@ -230,7 +230,9 @@
             <div class="f_boxes_f">
                 <form action="post" class="center_n newsletter">
                         <p>Subscribe to our newsletter</p>
+                        <label for="name" style="display: none;">Name</label>
                         <input type="text" id="name" name="name" placeholder="Name">
+                        <label for="email" style="display: none;">Email</label>
                         <input type="email" id="email" name="email" placeholder="Email"
                                 required>
                         <div>
@@ -238,8 +240,8 @@
                                     name="Accept_p_s">Accept <a href="/">privacy
                                     statement</a></label>
                         </div>
-                    <label class="news_b"><input type="submit" name="submit" value="Subscribe"
-                            class="button b_green send_b"></label>
+                    <input type="submit" name="submit" value="Subscribe"
+                            class="button b_green send_b news_b">
                 </form>
             </div>
         </div>
